@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>10</version><!-- TODO 10.1.2 java.lang.ClassNotFoundException: org.apache.tomcat.jakarta ee.EE Spec Profile -->
+            <version>10.0.2</version><!-- TODO 10.1.2 java.lang.ClassNotFoundException: org.apache.tomcat.jakarta ee.EE Spec Profile -->
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
@@ -24,8 +24,8 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>com.tugalsan.gvm.web.Main</exec.mainClass>
     </properties>
     <build>
@@ -57,10 +57,13 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <release>19</release>
+                    <release>20</release><enablePreview>true</enablePreview>
                     <compilerArgs>
-                        <!-- <arg>- -enable-preview</arg> -->
-                        <!-- <arg>- -add-modules=jdk.incubator.concurrent</arg> -->
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.concurrent</arg>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.vector</arg>
+                        <!-- <arg>-XX:+EnableDynamicAgentLoading -->
                     </compilerArgs>
                 </configuration>
             </plugin>
